--- a/package.json
+++ b/package.json
@@ -10,11 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "html-react-parser": "^5.2.2",
+    "input-otp": "^1.4.1",
+    "lucide-react": "^0.468.0",
+    "motion": "^11.13.1",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "web-vitals": "^4.2.4"
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.1.5",
+    "react-tag-input-component": "^2.0.2",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
