--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.4.3",
     "html-react-parser": "^5.2.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
